--- a/sitestuf/index.html
+++ b/sitestuf/index.html
@@ -1,100 +1,104 @@
 <!DOCTYPE html>
-<html lang="en"><!--start html-->
+<html lang="en">
 <head>
-
-<title>rubberocket</title><!--title of page-->
-<meta property="og:title" content="rubberocket"><!--title of page in seo-->
-
-<meta property="og:type" content="website"><!--type of page, website or article-->
-
-<meta property="og:url" content="https://www.rubberocket.com"><!--exact url-->
-<link rel="canonical" href="https://www.rubberocket.com"><!--exact url again-->
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0"><!--responsive webdesign-->
-
-<meta property="og:description" content="rubberocket: work-in-progress personal website magic since 2023."><!--description-->
-<meta name="description" content="rubberocket: work-in-progress personal website magic since 2023."><!--said description-->
-
-<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, NduruD, art, animation, cartoons, cartooning, artist, static, html, geocities, y2k, rubber rocket, blah guy, rubberrocket, team rubberocket, car, toon, ing, all that jazz, old web, oldnet, theoldnet, wayback, i'm getting desperate here, BadBunsen, EnerEnergyMonster123, Nduru Diallo, ASouthParkFanArtist, Stereotee"><!--does anyone stil use these-->
-
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"><!--favicon-->
-
-<link rel="stylesheet" href="resources/styles/main.css" type="text/css"><!--stylesheet-->
-
-<!--done with the head-->
-<!--unless you wanna add in some css, in which case look below:-->
+<title>rubberocket</title>
+<meta property="og:type" content="website">
+<meta name="description" 
+content="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
+<meta property="og:description" 
+content="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
+<meta name="keywords"
+content="rubberocket, rubberocket.com, cartoons, animation, art, y2k, netscape, geocities, blah guy, upl, untitled public license, Aleph Diallo, Rubber Rocket, Nduru Diallo, NduruD, BadBunsen, Totally Object Show, Flash, macromedia, draw, sketches, cartoonist">
+<link rel="canonical" href="https://www.rubberocket.com">
+<meta property="og:url" content="https://www.rubberocket.com">
 </head>
-
-<body>
-<!--very self-explanatory tag below!-->
-<nav>
-
-<div class="siteUI_header">
-<img src="resources/grfx/logos/rubberocket/wordmark/wordmark_dotcom_anim.gif" alt="Rubberocket.com">
+<body bgcolor="#FFCC00">
+<!-- BEGIN HEADER -->
+<table cellspacing="1" width="100%" cellpadding="5"  border="0">
+<tr>
+<td>
+<div align="center">
+<!--logo-->
+<img
+src="resources/grfx/logos/rubberocket/wordmark/wordmark_dotcom_anim.gif"
+alt="Rubberocket.com"
+>
 </div>
+</td>
+</tr>
+<tr>
+<td>
+<hr>
+</td>
+</tr>
+</table>
+<table cellspacing="1" width="320" height="64" cellpadding="5"  border="0">
+<!--one of many sacred netscape rituals-->
+<center>
+<!--START LINKS-->
+<tr valign="top" align="center">
+<td>
+<a href="index.html">
+<img src="resources/grfx/site/icons/comp.gif" border="0" width="64" height="64" alt="The home icon is a computer.">
+</a>
+<font face="Arial, Helvetica, sans-serif"><strong>
+<a href="index.html">Home</a>
+</strong></font>
+</td>
+<td>
+<a href="old/art/">
+<img src="resources/grfx/site/icons/paint.gif" border="0" width="64" height="64" alt="The art icon is a paint bucket in front of a piece of paper."></a>
+<font face="Arial, Helvetica, sans-serif"><strong>
+<a href="old/art/">Art</a>
+</strong></font>
+</td>
+<td>
+<a href="old/videos/">
+<img src="resources/grfx/site/icons/projector.gif" border="0" width="64" height="64" alt="The videos icon is a movie projector."></a>
+<font face="Arial, Helvetica, sans-serif"><strong>
+<a href="old/videos/">Videos</a>
+</strong></font>
+</td>
+<td>
+<a href="old/about/">
+<img src="resources/grfx/site/icons/users.gif" border="0" width="64" height="64" alt="The about icon shows two heads."></a>
+<font face="Arial, Helvetica, sans-serif"><strong>
+<a href="old/about/">About</a>
+</strong></font>
+</td>
+<td>
+<a href="old/moar/">
+<img src="resources/grfx/site/icons/links.gif" border="0" width="64" height="64" alt="The links icon shows a mouse cursor over a globe."></a>
+<font face="Arial, Helvetica, sans-serif"><strong>
+<a href="old/moar/">Links</a>
+</strong></font>
+</td>
+</tr>
+<!--END LINKS-->
+</table>
+</center>
+<hr>
+<!--END HEADER-->
+<!--DELETE THE LINES BELOW WHEN DONE-->
+<center>
+<img src="resources/gifs/barraconstruction.gif">
+</center>
+<!--DELETE THE LINES ABOVE WHEN DONE-->
 
-<div class="siteUI_navbar">
+<!--START CONTENT-->
+<h1 align="center">This website is still under construction!</h1>
+<p>But this time, you can view it (and by "it" I mean this homepage because everything else won't work) in your old, crappy browser of choice... useless for most but interesting for some.</p>
+<p>Hey, if you're viewing this in a new enough browser, there's not much stopping you from visiting the rest of the site as it was. <a href="old/">Click here to see it!</a></p>
+<!--END CONTENT-->
 
-<div class="siteUI_navbar_link"><a href="/old/art/">
-<picture><source srcset="resources/grfx/site/icons/paint.svg"><img src="resources/grfx/site/icons/paint.png" alt="ArtView" width="128" height="128" class="siteUI_navbar_link_icon"></picture>
-ArtView</a></div>
-<div class="siteUI_navbar_link"><a href="/old/videos/">
-<picture><source srcset="resources/grfx/site/icons/projector.svg"><img src="resources/grfx/site/icons/projector.png" alt="Videos" width="128" height="128" class="siteUI_navbar_link_icon"></picture>
-Videos</a></div>
-<div class="siteUI_navbar_link"><a href="/old/about/">
-<picture><source srcset="resources/grfx/site/icons/users.svg"><img src="resources/grfx/site/icons/users.png" alt="About" width="128" height="128" class="siteUI_navbar_link_icon"></picture>
-About</a></div>
-<div class="siteUI_navbar_link"><a href="/old/moar/">
-<picture><source srcset="resources/grfx/site/icons/links.svg"><img src="resources/grfx/site/icons/links.png" alt="Links" width="128" height="128" class="siteUI_navbar_link_icon"></picture>
-Links</a></div>
+<hr>
 
-</div>
-
-</nav><!--end that-->
-
-<!--start main stuff-->
-<div class="main text-center">
-  <p><img src="resources/gifs/barraconstruction.gif" alt="UNDER CONSTRUCTION!!!"></p>
-  <p>I SWEAR I'M WORKING ON IT</p>
-</div>
-<!--end main stuff-->
-
-<!--start footer-->
-<footer>
-<hr width="95%">
-<div class="footer">
-Copyright &copy; 2023-{WHATEVER, WHENEVER} Aleph Diallo.<br>
-Made with Macromedia, Windows, <span id="siteJS_footer_andwhat">and love</span>.<br>
-Media licensed under the <a href="/old/upl/">Untitled Public License</a>, code licensed under the <a href="https://codeberg.org/rubberocket/pages/raw/branch/main/LICENSE" target="_blank">BSD 3-Clause license</a>.
-<script type="text/javascript">
-const footerandwhat = document.getElementById("siteJS_footer_andwhat");
-var andwhat = [];
-andwhat[0] = "and love";
-andwhat[1] = "and tons of unrestricted internet access";
-andwhat[2] = "and Geocities";
-andwhat[3] = "and a poor understanding of CSS";
-andwhat[4] = 'and ""talent""';
-andwhat[5] = "and some JavaScript inbetween";
-andwhat[6] = "sugar, spice, and everything nice";
-andwhat[7] = "boogers, vomit, and everything icky";
-andwhat[8] = "and tons of old cartoons";
-andwhat[9] = "and tons of new cartoons";
-andwhat[10] = "and not a single 5Adobe CC subscription";
-andwhat[11] = "and... and... and... and... and... and... and... and... and... and... uh... mm...";
-andwhat[12] = "undefined";
-andwhat[13] = "girls who like boys who like boys who like girls who dig girls like they're girls who dig girls like they're boys, and love.";
-var andwhat_lngth = andwhat.length;
-function getRandomInt(min, max) {
-  const minCeiled = Math.ceil(min);
-  const maxFloored = Math.floor(max);
-  return Math.floor(Math.random() * (maxFloored - minCeiled) + minCeiled); // The maximum is exclusive and the minimum is inclusive
-} //shoutout to mozilla
-var andwhat_random_lngth = getRandomInt(0, andwhat_lngth);
-footerandwhat.innerHTML = andwhat[andwhat_random_lngth];
-</script>
-</div>
-</footer>
-<!--end footer-->
-
+<!--START FOOTER-->
+<center><p><small>
+Copyright &copy; Aleph Diallo.<br>
+Site code licensed under the BSD 3-Clause License.<br>
+Site assets, excluding Windows 98 icons and other copyrighted works not by Aleph Diallo licensed under the <a href="old/upl/LICENSE.txt" target="_blank">Untitled Public License</a>.
+</small></p></center>
+<!--END FOOTER-->
 </body>
-<!--end html--></html>
+</html>
