--- a/sitestuf/old/about/index.html
+++ b/sitestuf/old/about/index.html
@@ -71,7 +71,7 @@
           <p>Let's find out with the following links! </p>
           <p><a href="https://web.archive.org/web/20240921013100/https://www.rubberocket.com/" target="_blank">Rubberocket as of September 20th 2024, at least in terms of design. Everything else right now is the same.</a> </p>
           <p><a href="http://rrkt.rf.gd" target="_blank">Rubberocket as of August 24th 2024, hosted on InfinityFree</a>.</p>
-          <p><a href="https://rubberocket.github.io/old/" target="_blank">Rubberocket as of... March 2024??</a> </p>
+          <p><a href="https://rubberocket.github.io/oldrocket/" target="_blank">Rubberocket as of... March 2024??</a> </p>
           <p><a href="https://rubberocket.github.io/older/" target="_blank">Rubberocket as of <em>later</em> February 2024</a></p>
           <p><a href="https://older-self.vercel.app/" target="_blank">Rubberocket as of February 2024</a> </p>
           <p><a href="https://web.archive.org/web/20240113203529/https://rubberocket.com/" target="_blank">Rubberocket as of January 2024</a> </p>
