IM TOTALLY WORKING ON IT CONSISTENTLY
SORSE: TRUST ME BRO

--- a/sitestuf/index.html
+++ b/sitestuf/index.html
@@ -1,104 +1,79 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>rubberocket</title>
-<meta property="og:type" content="website">
-<meta name="description" 
-content="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
-<meta property="og:description" 
-content="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
-<meta name="keywords"
-content="rubberocket, rubberocket.com, cartoons, animation, art, y2k, netscape, geocities, blah guy, upl, untitled public license, Aleph Diallo, Rubber Rocket, Nduru Diallo, NduruD, BadBunsen, Totally Object Show, Flash, macromedia, draw, sketches, cartoonist">
-<link rel="canonical" href="https://www.rubberocket.com">
-<meta property="og:url" content="https://www.rubberocket.com">
-</head>
-<body bgcolor="#FFCC00">
+<!DOCTYPE html><HTML>
+<HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<META NAME="description" CONTENT="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
+<META NAME="keywords" CONTENT="rubberocket, rubberocket.com, cartoons, animation, art, y2k, netscape, geocities, blah guy, upl, untitled public license, Aleph Diallo, Rubber Rocket, Nduru Diallo, NduruD, BadBunsen, Totally Object Show, Flash, macromedia, draw, sketches, cartoonist">
+<TITLE>rubberocket</TITLE>
+<LINK REL="canonical" HREF="https://www.rubberocket.com">
+<META PROPERTY="og:type" CONTENT="website">
+<META PROPERTY="og:description" CONTENT="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
+<META property="og:url" CONTENT="https://www.rubberocket.com">
+</HEAD>
+<BODY BGCOLOR="#FFCC00">
 <!-- BEGIN HEADER -->
-<table cellspacing="1" width="100%" cellpadding="5"  border="0">
-<tr>
-<td>
-<div align="center">
-<!--logo-->
-<img
-src="resources/grfx/logos/rubberocket/wordmark/wordmark_dotcom_anim.gif"
-alt="Rubberocket.com"
->
-</div>
-</td>
-</tr>
-<tr>
-<td>
-<hr>
-</td>
-</tr>
-</table>
+<TABLE BORDER=0 CELLPADDING=5 WIDTH="100%" >
+<TR>
+<TD>
+<CENTER><!--logo--><IMG SRC="resources/grfx/logos/rubberocket/wordmark/wordmark_dotcom_anim.gif" ALT="Rubberocket.com" width="716" height="46" >&nbsp;
+</CENTER>
+</TD>
+</TR>
+
+<TR>
+<TD>
+<HR></TD>
+</TR>
+</TABLE>
 <!--one of many sacred netscape rituals-->
-<center>
-<table cellspacing="1" width="320" height="64" cellpadding="5"  border="0">
-<!--START LINKS-->
-<tr valign="top" align="center">
-<td>
-<a href="index.html">
-<img src="resources/grfx/site/icons/comp.gif" border="0" width="64" height="64" alt="The home icon is a computer.">
-</a>
-<font face="Arial, Helvetica, sans-serif"><strong>
-<a href="index.html">Home</a>
-</strong></font>
-</td>
-<td>
-<a href="archive/art/">
-<img src="resources/grfx/site/icons/paint.gif" border="0" width="64" height="64" alt="The art icon is a paint bucket in front of a piece of paper."></a>
-<font face="Arial, Helvetica, sans-serif"><strong>
-<a href="archive/art/">Art</a>
-</strong></font>
-</td>
-<td>
-<a href="archive/videos/">
-<img src="resources/grfx/site/icons/projector.gif" border="0" width="64" height="64" alt="The videos icon is a movie projector."></a>
-<font face="Arial, Helvetica, sans-serif"><strong>
-<a href="archive/videos/">Videos</a>
-</strong></font>
-</td>
-<td>
-<a href="archive/about/">
-<img src="resources/grfx/site/icons/users.gif" border="0" width="64" height="64" alt="The about icon shows two heads."></a>
-<font face="Arial, Helvetica, sans-serif"><strong>
-<a href="archive/about/">About</a>
-</strong></font>
-</td>
-<td>
-<a href="archive/moar/">
-<img src="resources/grfx/site/icons/links.gif" border="0" width="64" height="64" alt="The links icon shows a mouse cursor over a globe."></a>
-<font face="Arial, Helvetica, sans-serif"><strong>
-<a href="archive/moar/">Links</a>
-</strong></font>
-</td>
-</tr>
-<!--END LINKS-->
-</table>
-</center>
-<hr>
-<!--END HEADER-->
-<!--DELETE THE LINES BELOW WHEN DONE-->
-<center>
-<img src="resources/gifs/barraconstruction.gif">
-</center>
-<!--DELETE THE LINES ABOVE WHEN DONE-->
+<CENTER><TABLE BORDER=0 CELLPADDING=5 WIDTH="320" HEIGHT="64" >
+<CAPTION>
+<CENTER><!--START LINKS--></CENTER>
 
-<!--START CONTENT-->
-<h1 align="center">This website is still under construction!</h1>
-<p>But this time, you can view it (and by "it" I mean this homepage because everything else won't work) in your old, crappy browser of choice... useless for most but interesting for some.</p>
-<p>Hey, if you're viewing this in a new enough browser, there's not much stopping you from visiting the rest of the site as it was. <a href="archive/">Click here to see it!</a></p>
-<!--END CONTENT-->
+<CENTER><!--END LINKS--></CENTER>
+</CAPTION>
 
-<hr>
+<TR ALIGN=CENTER VALIGN=TOP>
+<TD><A HREF="index.html"><IMG SRC="resources/grfx/site/icons/comp.gif" ALT="The home icon is a computer." BORDER=0 HEIGHT=64 WIDTH=64></A><A HREF="index.html">
+<B><FONT FACE="Arial, Helvetica, sans-serif">Home</FONT></B></A><B><FONT FACE="Arial, Helvetica, sans-serif">&nbsp;</FONT></B></TD>
 
-<!--START FOOTER-->
-<center><p><small>
-Copyright &copy; Aleph Diallo.<br>
-Site code licensed under the BSD 3-Clause License.<br>
-Site assets, excluding Windows 98 icons and other copyrighted works not by Aleph Diallo licensed under the <a href="archive/upl/LICENSE.txt" target="_blank">Untitled Public License</a>.
-</small></p></center>
+<TD><A HREF="archive/art/"><IMG SRC="resources/grfx/site/icons/paint.gif" ALT="The art icon is a paint bucket in front of a piece of paper." BORDER=0 HEIGHT=64 WIDTH=64></A>
+<B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="archive/art/">Art</A>&nbsp;</FONT></B></TD>
+
+<TD><A HREF="archive/videos/"><IMG SRC="resources/grfx/site/icons/projector.gif" ALT="The videos icon is a movie projector." BORDER=0 HEIGHT=64 WIDTH=64></A>
+<B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="archive/videos/">Videos</A>&nbsp;</FONT></B></TD>
+
+<TD><A HREF="archive/about/"><IMG SRC="resources/grfx/site/icons/users.gif" ALT="The about icon shows two heads." BORDER=0 HEIGHT=64 WIDTH=64></A>
+<B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="archive/about/">About</A>&nbsp;</FONT></B></TD>
+
+<TD><A HREF="archive/moar/"><IMG SRC="resources/grfx/site/icons/links.gif" ALT="The links icon shows a mouse cursor over a globe." BORDER=0 HEIGHT=64 WIDTH=64></A>
+<B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="moar/">Links</A>&nbsp;</FONT></B></TD>
+</TR>
+</TABLE></CENTER>
+
+<HR><!--END HEADER--><!--DELETE THE LINES BELOW WHEN DONE-->
+<CENTER><IMG SRC="resources/gifs/barraconstruction.gif" width="574" height="51" >
+</CENTER>
+<!--DELETE THE LINES ABOVE WHEN DONE--><!--START CONTENT-->
+<CENTER>
+<H1>
+I SWEAR, I'M WORKING ON IT!</H1></CENTER>
+But this time, you can view it (and by "it" I mean this homepage because
+everything else won't work) in your old, crappy browser of choice... useless
+for most but interesting for some.
+
+<P>Hey, if you're viewing this in a new enough browser, there's not much
+stopping you from visiting the rest of the site as it was. <A HREF="archive/">Click
+here to see it!</A>
+<BR><!--END CONTENT-->
+<HR><!--START FOOTER-->
+<CENTER></CENTER>
+
+<CENTER><FONT SIZE=-1>Copyright &copy; Aleph Diallo.</FONT></CENTER>
+
+<CENTER><FONT SIZE=-1>Site code licensed under the BSD 3-Clause License.</FONT></CENTER>
+
+<CENTER><FONT SIZE=-1>Site assets, excluding Windows 98 icons and other
+copyrighted works not by Aleph Diallo licensed under the <A HREF="archive/upl/LICENSE.txt" target="_blank">Untitled
+Public License</A>.</FONT></CENTER>
 <!--END FOOTER-->
-</body>
-</html>
+</BODY>
+</HTML>
