--- a/sitestuf/olddir/index.html
+++ b/sitestuf/olddir/index.html
@@ -1,2 +1,38 @@
-<HTML>
-</HTML>
+<HTML>
+<h1>Old Stuff (that I can find) </h1>
+<p><a href="/">(Looking for new stuff?)</a> </p>
+<h2>Websites</h2>
+<p><strong><a href="http://web.archive.org/web/20240921013100/https://www.rubberocket.com/" target="_blank">Rubberocket as of September 21st, 2024</a> </strong></p>
+<p><a href="http://rrkt.rf.gd/" target="_blank"><strong>Rubberocket as of August 24th 2024</strong></a> (This design lasted from May to August of that year! Amazing, I know! Hosted on InfinityFree, originally hosted on InstaFree. Strongly recommended if you want to make a personal website with PHP.)</p>
+<p><strong><a href="http://www.rubberocket.com/oldrocket/" target="_blank">Rubberocket as of March 3rd 2024</a> </strong></p>
+<p><a href="http://www.rubberocket.com/older/" target="_blank"><strong>Rubberocket as of February 26th 2024</strong></a><strong> </strong></p>
+<p><a href="https://older-self.vercel.app/" target="_blank"><strong>Rubberocket as of January 30th 2024</strong></a> </p>
+<p><a href="http://web.archive.org/web/20240113203529/https://rubberocket.com/" target="_blank"><strong>Rubberocket as of January 13th 2024 </strong></a></p>
+<p><a href="https://ndurutoons.glitch.me/" target="_blank"><strong>ndurutoons.glitch.me</strong></a> (I expected this to be from 2021, but surprisingly it's from 2020. This was around the time I wanted to make a web series ASAP. I <u><em>still</em></u> want to make a web series, just not ASAP.)</p>
+<p><a href="https://ndurudiallo.glitch.me" target="_blank"><strong>ndurudiallo.glitch.me</strong></a> (I used to put up stories I made during 5th-grade here, and if you can't tell, this was around the time I was obsessed with the South Park art style. Last updated in 2021.)</p>
+<p><a href="http://www.rubberocket.com/neocities/" target="_blank"><strong>Old Neocities Sites</strong></a> (not included: <a href="https://aweb-old.vercel.app/" target="_blank">alephd as of August 2023</a>, <a href="https://aweb-older.vercel.app/index.html" target="_blank">alephd as of July 2023</a>)</p>
+<p><a href="https://stereotee.wixsite.com/rubberrocket" target="_blank"><strong>Rubberrocket: The Precursor to Rubberocket, circa 2020</strong></a></p>
+<h2>Old Wiki <em>Contributions</em></h2>
+<p>I barely use Fandom unless I want to go &quot;erm, actually&quot; with some pages or neuter &quot;Nduru Diallo&quot; with Troy Bobber for shits and giggles <em>and</em> to distance myself. </p>
+<p><a href="https://trollpasta.com/wiki/User:HomsarTheWeird" target="_blank"><strong>Trollpasta Wiki</strong></a> (2021-2024, mainly shitty horror stories and  trollpastas.) </p>
+<h3><strong>Ficreation/Fanon Kingdom</strong></h3>
+<p>This was my snap back to reality after being obsessed with Greeny Phatom. Imagine if this site <em>wasn't</em> contradictory. Imagine if the admins didn't delete stuff just because they didn't like it. What would my life even be like if it weren't for that closeted child tickler who initiated the wiki?</p>
+<p><a href="https://fanon-kingdom.fandom.com/wiki/Special:Contributions/Expired_Golden_Idol" target="_blank"><strong>as Expired Golden Idol</strong></a> (formerly Black Knight Animation Studios, 2020)</p>
+<p><a href="https://fanon-kingdom.fandom.com/wiki/Special:Contributions/Black_Knight_Animation_Studios_2" target="_blank"><strong>as Black Knight Animation Studios 2</strong></a> (2020; Miraheze version from 2020-2021)</p>
+<p><a href="https://dreamlogos.fandom.com/wiki/Special:Contributions/Stereotee" target="_blank"><strong>Dream Logos Wiki</strong></a> (<a href="https://dreamlogos.fandom.com/wiki/Special:Contributions/Expired_Golden_Idol?target=Expired+Golden+Idol" target="_blank">2020-2021</a>, 2022-2023. This is where I learned a lot of things about graphic design that's still in my head today.) </p>
+<h2>Old Wikis</h2>
+<p><strong><a href="https://web.archive.org/web/20240921180236/https://naktmofficial.fandom.com/wiki/Special:AllPages" target="_blank">Nightmare And Koopatroopaman/Awesomia Wiki</a></strong> (Circa 2021, archived 2024. This is around the time when I... kind of... started to come up with original premises for ideas. Still nothing close to whatever's in my head now.)</p>
+<p><strong><a href="https://web.archive.org/web/20241123230451/https://exclamation-usa.fandom.com/wiki/Special:AllPages" target="_blank">Exclamation, USA! Wiki</a></strong> (Circa 2020, archived 2024. Now <em>this</em> is a word-for-word Clone High ripoff, with a dash of Pooh's Adventures and, for desert, Cool Cat references... or was it the MS.Sam wiki? Whatever. Eat up!)</p>
+<p><strong><a href="https://web.archive.org/web/20240921175753/https://ms-dot-sam.fandom.com/wiki/Special:AllPages" target="_blank">MS.Sam Wiki</a></strong> (Circa 2020, archived 2024. It was initially a South Park ripoff, then a...probably word-for-word... Clone High ripoff.) </p>
+<p><a href="https://web.archive.org/web/20240921175459/https://jls-official.fandom.com/wiki/Special:AllPages" target="_blank"><strong>JLS Wiki</strong></a> (Circa 2020, archived 2024. It's a Clone High ripoff... is it? I don't know. Maybe it's Clone High and Nightmare. Or The Nightmare Show. Or Marc Benson's Wacky Hijinks.)</p>
+<p><a href="https://web.archive.org/web/20240921180851/https://sp2yrslater.fandom.com/wiki/South_Park_:_2_Years_Later_Wiki" target="_blank"><strong>South Park: 2 Years Later Wiki</strong></a> (Circa 2020, archived 2024. It's an ambitious South Park fanfiction!) </p>
+<h2>Scratch Projects</h2>
+<p><a href="https://scratch.mit.edu/users/alephd/" target="_blank"><strong>alephd</strong></a> (my current, possibly final, Scratch account) </p>
+<p><a href="https://scratch.mit.edu/search/projects?q=southparkcomedian2" target="_blank"><strong>-SouthParkComedian2-</strong></a> (SouthParkComedian2 was <em>not</em> taken)</p>
+<p> <a href="https://scratch.mit.edu/search/projects?q=-southparkcomedian-" target="_blank"><strong>-SouthParkComedian-</strong></a> (SouthParkComedian was taken) </p>
+<p><a href="https://scratch.mit.edu/search/projects?q=joweelovesscratch" target="_blank"><strong>JoweeLovesScratch</strong></a> (if you couldn't tell, there's barely anything from that exact account. That's because I deleted almost all the evidence in an effort to fully move on from consistently posting on Scratch. It only took 6-ish years!)</p>
+<p> <a href="https://scratch.mit.edu/search/projects?q=nicktoons123" target="_blank"><strong>NICKTOONS123</strong></a> (My second Scratch account.) </p>
+<p><a href="https://scratch.mit.edu/search/projects?q=nickefeindon" target="_blank"><strong>Nickefeindon</strong></a> (My first Scratch account.)</p>
+
+</HTML>
+
