--- a/sitestuf/404.html
+++ b/sitestuf/404.html
@@ -1,2 +1,74 @@
-Redirect time! (nothing here yet)
-<meta http-equiv="refresh" content="3, /index.html">
+<HTML><!-- InstanceBegin template="/Templates/main_template.dwt" codeOutsideHTMLIsLocked="false" -->
+<HEAD>
+<!-- InstanceBeginEditable name="meta tags" -->
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<META NAME="description" CONTENT="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
+<META NAME="keywords" CONTENT="rubberocket, rubberocket.com, cartoons, animation, art, y2k, netscape, geocities, blah guy, upl, untitled public license, Aleph Diallo, Rubber Rocket, Nduru Diallo, NduruD, BadBunsen, Totally Object Show, Flash, macromedia, draw, sketches, cartoonist">
+<TITLE>rubberocket</TITLE>
+<LINK rel="canonical" href="https://www.rubberocket.com">
+<META property="og:type" content="website">
+<META NAME="description" 
+	content="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
+<META property="og:description" 
+	content="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
+<META NAME="keywords"
+	content="rubberocket, rubberocket.com, cartoons, animation, art, y2k, netscape, geocities, blah guy, upl, untitled public license, Aleph Diallo, Rubber Rocket, Nduru Diallo, NduruD, BadBunsen, Totally Object Show, Flash, macromedia, draw, sketches, cartoonist">
+<META property="og:url" content="https://www.rubberocket.com">
+<!-- InstanceEndEditable -->
+<!-- InstanceParam name="bgcolor" type="color" value="#FFCC00" --><!-- InstanceParam name="text" type="color" value="#000000" --><!-- InstanceParam name="linkcolor" type="color" value="#0000EE" --><!-- InstanceParam name="vlink" type="color" value="#551A8B" --><!-- InstanceParam name="alink" type="color" value="#FF0000" --><!-- InstanceParam name="background" type="URL" value="" -->
+</HEAD>
+<BODY BACKGROUND="" BGCOLOR="#FFCC00" TEXT="#000000" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
+<!-- BEGIN HEADER -->
+<TABLE BORDER=0 CELLPADDING=5 WIDTH="100%">
+<TR>
+<TD>
+<!--logo--><IMG SRC="/resources/grfx/logos/rubberocket/wordmark/wordmark_dotcom.gif" ALT="Rubberocket.com" width="404" height="25"></TD>
+</TR>
+
+<TR>
+<TD>
+<HR></TD>
+</TR>
+</TABLE>
+
+<!--START LINKS-->
+<TABLE>
+<TR ALIGN=LEFT VALIGN=TOP>
+<TD><A HREF="/index.html"><IMG SRC="/resources/grfx/site/icons/comp.gif" ALT="Home" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+
+<TD><A HREF="/archive/art"><IMG SRC="/resources/grfx/site/icons/paint.gif" ALT="Art" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+
+<TD><A HREF="/archive/videos"><IMG SRC="/resources/grfx/site/icons/projector.gif" ALT="Videos" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+
+<TD><A HREF="/archive/about"><IMG SRC="/resources/grfx/site/icons/users.gif" ALT="About" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+
+<TD><A HREF="/archive/moar"><IMG SRC="/resources/grfx/site/icons/links.gif" ALT="Links" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+</TR>
+</TABLE>
+<!--END LINKS-->
+
+<HR>
+<!--END HEADER-->
+
+<!--START CONTENT-->
+<!-- InstanceBeginEditable name="content_farm" -->
+<p><font size="+5"><strong>:(</strong></font></p>
+<p><strong>Click the computer icon above to go home.</strong></p>
+<p><font size="-2">(If you couldn't tell by now, I still don't have an idea for this 404 page) </font></p>
+<!-- InstanceEndEditable --><BR>
+<!--END CONTENT-->
+
+<HR>
+
+<!--START FOOTER-->
+<FONT SIZE=-1>Copyright &copy; Aleph Diallo.</FONT>
+<BR>
+<FONT SIZE=-1>Site code licensed under the BSD 3-Clause License.</FONT>
+<BR>
+<FONT SIZE=-1>Site assets, excluding Windows 98 icons and other
+copyrighted works not by Aleph Diallo licensed under the <A HREF="/archive/upl/LICENSE.txt" target="_blank">Untitled
+Public License</A>.</FONT>
+<!--END FOOTER-->
+
+</BODY>
+<!-- InstanceEnd --></HTML>
