--- a/sitestuf/404.html
+++ b/sitestuf/404.html
@@ -42,13 +42,12 @@
 
 <TD><A HREF="/archive/about"><IMG SRC="/resources/grfx/site/icons/users.gif" ALT="About" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 
-<TD><A HREF="/archive/moar"><IMG SRC="/resources/grfx/site/icons/links.gif" ALT="Links" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+<TD><A HREF="/moar"><IMG SRC="/resources/grfx/site/icons/links.gif" ALT="Links" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 </TR>
 </TABLE>
 <!--END LINKS-->
 
-<HR>
-<!--END HEADER-->
+<HR><!--END HEADER-->
 
 <!--START CONTENT-->
 <!-- InstanceBeginEditable name="content_farm" -->
