--- a/sitestuf/index.html
+++ b/sitestuf/index.html
@@ -44,7 +44,7 @@
 <TD><A HREF="archive/about/"><IMG SRC="resources/grfx/site/icons/users.gif" ALT="The about icon shows two heads." BORDER=0 HEIGHT=64 WIDTH=64></A>
 <B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="archive/about/">About</A>&nbsp;</FONT></B></TD>
 
-<TD><A HREF="archive/moar/"><IMG SRC="resources/grfx/site/icons/links.gif" ALT="The links icon shows a mouse cursor over a globe." BORDER=0 HEIGHT=64 WIDTH=64></A>
+<TD><A HREF="/moar/"><IMG SRC="resources/grfx/site/icons/links.gif" ALT="The links icon shows a mouse cursor over a globe." BORDER=0 HEIGHT=64 WIDTH=64></A>
 <B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="moar/">Links</A>&nbsp;</FONT></B></TD>
 </TR>
 </TABLE></CENTER>
