--- a/sitestuf/moar/index.html
+++ b/sitestuf/moar/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><HTML><!-- InstanceBegin template="/Templates/main_template.dwt" codeOutsideHTMLIsLocked="false" -->
+<HTML><!-- InstanceBegin template="/Templates/main_template.dwt" codeOutsideHTMLIsLocked="false" -->
 <HEAD>
 <!-- InstanceBeginEditable name="meta tags" -->
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
@@ -63,7 +63,7 @@ function MM_swapImage() { //v3.0
 
 <TD><A HREF="/archive/about"><IMG SRC="/resources/grfx/site/icons/users.gif" ALT="About" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 
-<TD><A HREF="/archive/moar"><IMG SRC="/resources/grfx/site/icons/links.gif" ALT="Links" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+<TD><A HREF="/moar"><IMG SRC="/resources/grfx/site/icons/links.gif" ALT="Links" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 </TR>
 </TABLE>
 <!--END LINKS-->
