--- a/sitestuf/olddir/index.html
+++ b/sitestuf/olddir/index.html
@@ -1,13 +1,15 @@
 <HTML>
 <h1>Old Stuff (that I can find) </h1>
 <p><a href="/">(Looking for new stuff?)</a> </p>
-<h2>Websites</h2>
+<h2><em>Noteworthy</em> Websites</h2>
+<h3>Old Versions of Rubberocket </h3>
 <p><strong><a href="http://web.archive.org/web/20240921013100/https://www.rubberocket.com/" target="_blank">Rubberocket as of September 21st, 2024</a> </strong></p>
 <p><a href="http://rrkt.rf.gd/" target="_blank"><strong>Rubberocket as of August 24th 2024</strong></a> (This design lasted from May to August of that year! Amazing, I know! Hosted on InfinityFree, originally hosted on InstaFree. Strongly recommended if you want to make a personal website with PHP.)</p>
 <p><strong><a href="http://www.rubberocket.com/oldrocket/" target="_blank">Rubberocket as of March 3rd 2024</a> </strong></p>
 <p><a href="http://www.rubberocket.com/older/" target="_blank"><strong>Rubberocket as of February 26th 2024</strong></a><strong> </strong></p>
 <p><a href="https://older-self.vercel.app/" target="_blank"><strong>Rubberocket as of January 30th 2024</strong></a> </p>
 <p><a href="http://web.archive.org/web/20240113203529/https://rubberocket.com/" target="_blank"><strong>Rubberocket as of January 13th 2024 </strong></a></p>
+<h3>The Rest </h3>
 <p><a href="https://alephdiallo.glitch.me/" target="_blank"><strong>alephdiallo.glitch.me</strong></a> (Circa 2023) </p>
 <p><a href="https://alephnation.glitch.me/" target="_blank"><strong>alephnation.glitch.me</strong></a> (Circa 2021, unfinished) </p>
 <p><a href="https://mandatoryinc.glitch.me/" target="_blank"><strong>mandatoryinc.glitch.me</strong></a> (Circa 2021. Wow, I should really do that Kinetic + Nightmare idea, but this time with original characters. And blackjacks. And hookers!) </p>
@@ -34,7 +36,7 @@
 <h2>&quot;Social Media&quot;</h2>
 <p>In quotations because these aren't mainstream and they probably shouldn't be used seriously, either.</p>
 <p><a href="https://strimm.com/sss/TheAW"><strong>The AW on Strimm</strong></a> (2019, this is the thing logo kiddies use or something. Really! Search up &quot;strimm&quot; in YouTube and scroll down for long enough. Don't expect anything, though, since this exact channel hasn't aired anything in ages. I do not plan to update it, either.) </p>
-<p><a href="http://web.archive.org/web/20200713164631/https://vlare.tv/u/ounCJOke" target="_blank"><strong>Vlare</strong></a> (2020, it died a year after I used it <a href="https://x.com/VlareTV/status/1419320254707216395" target="_blank">due to server costs or something</a>. I never got my videos back.) </p>
+<p><a href="http://web.archive.org/web/20200713164631/https://vlare.tv/u/ounCJOke" target="_blank"><strong>Vlare</strong></a> (2020, it died a year after I used it <a href="https://x.com/VlareTV/status/1419320254707216395" target="_blank">due to server costs or something</a>. <s>I never got my videos back.</s> Forget what I said! <em>One</em> video is fully archived! The rest were flushed down the toilet!) </p>
 <p><a href="https://odysee.com/@AlephDFilms:4" target="_blank"><strong>Odysee</strong></a> (2021, never came back to it)</p>
 <h2>Scratch Projects</h2>
 <p><a href="https://scratch.mit.edu/users/alephd/" target="_blank"><strong>alephd</strong></a> (my current, possibly final, Scratch account) </p>
