Netscape shit to shove down your pipehole

--- a/sitestuf/index.html
+++ b/sitestuf/index.html
@@ -7,6 +7,7 @@
 <META PROPERTY="og:type" CONTENT="website">
 <META PROPERTY="og:description" CONTENT="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
 <META property="og:url" CONTENT="https://www.rubberocket.com">
+<LINK REL="shortcut icon" CONTENT="./favicon.ico">
 </HEAD>
 <BODY BGCOLOR="#FFCC00">
 <!-- BEGIN HEADER -->
@@ -66,6 +67,14 @@ here to see it!</A>
 <BR><!--END CONTENT-->
 <HR><!--START FOOTER-->
 <CENTER></CENTER>
+
+<CENTER><FONT SIZE=-1>
+<!-- START BUTTONS -->
+<IMG SRC="resources/grfx/buttons/rrkt.gif" ALT="Rubberocket.com button" BORDER=0>
+<IMG SRC="resources/grfx/buttons/made-with-windows.gif" ALT="Made with Windows" BORDER=0>
+<IMG SRC="resources/grfx/buttons/getnet3.gif" ALT="Get Netscape 3.0 Now!" BORDER=0>
+<!-- END BUTTONS -->
+</FONT></CENTER>
 
 <CENTER><FONT SIZE=-1>Copyright &copy; Aleph Diallo.</FONT></CENTER>
 
