--- a/sitestuf/moar/index.html
+++ b/sitestuf/moar/index.html
@@ -9,7 +9,8 @@
 <META PROPERTY="og:type" CONTENT="website">
 <META PROPERTY="og:description" CONTENT="Everything outside of rubberocket.com that's related to rubberocket.com. It's like linktree, but poorly built.">
 <META property="og:url" CONTENT="https://www.rubberocket.com/moar/">
-<script type="text/JavaScript">
+<LINK REL="shortcut icon" CONTENT="/favicon.ico">
+<script type="text/JavaScript" language="javascript">
 <!--
 function MM_swapImgRestore() { //v3.0
   var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
@@ -55,15 +56,15 @@ function MM_swapImage() { //v3.0
 <!--START LINKS-->
 <TABLE>
 <TR ALIGN=LEFT VALIGN=TOP>
-<TD><A HREF="/index.html"><IMG SRC="/resources/grfx/site/icons/comp.gif" ALT="Home" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+<TD><A HREF="/index.html"><IMG SRC="/resources/grfx/site/icons/comp.gif" ALT="Home" TITLE="Home" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 
-<TD><A HREF="/archive/art"><IMG SRC="/resources/grfx/site/icons/paint.gif" ALT="Art" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+<TD><A HREF="/archive/art"><IMG SRC="/resources/grfx/site/icons/paint.gif" ALT="Art" TITLE="Art" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 
-<TD><A HREF="/archive/videos"><IMG SRC="/resources/grfx/site/icons/projector.gif" ALT="Videos" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+<TD><A HREF="/archive/videos"><IMG SRC="/resources/grfx/site/icons/projector.gif" ALT="Videos" TITLE="Videos" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 
-<TD><A HREF="/archive/about"><IMG SRC="/resources/grfx/site/icons/users.gif" ALT="About" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+<TD><A HREF="/archive/about"><IMG SRC="/resources/grfx/site/icons/users.gif" ALT="About" TITLE="About" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 
-<TD><A HREF="/moar"><IMG SRC="/resources/grfx/site/icons/links.gif" ALT="Links" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+<TD><A HREF="/moar"><IMG SRC="/resources/grfx/site/icons/links.gif" ALT="Links" TITLE="Links" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 </TR>
 </TABLE>
 <!--END LINKS-->
